--- a/src/index.css
+++ b/src/index.css
@@ -235,30 +235,56 @@ html,
 /* tool tip css*/
 .tooltip-container {
   position: relative;
-  display: inline-block;
+  display: inline-block; 
 }
 
 .tooltip-text {
   visibility: hidden;
   background-color: #333;
   color: #fff;
-
   padding: 5px 10px;
   border-radius: 5px;
   position: absolute;
   bottom: 110%; 
-  left: 150%;
+  left: 50%; 
   transform: translateX(-50%);
   z-index: 1;
   opacity: 0;
   transition: opacity 0.2s ease-in-out;
-  white-space: nowrap;
+  white-space: normal; 
+  width: 200px; 
+  text-align: center; 
+  word-wrap: break-word; 
+  overflow: hidden; 
+  text-overflow: ellipsis; 
 }
+
 
 .tooltip-container:hover .tooltip-text {
   visibility: visible;
   opacity: 1;
 }
+
+
+.tooltip-container .tooltip-text::before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  border-width: 5px;
+  border-style: solid;
+  border-color: #333 transparent transparent transparent;
+}
+
+@media screen and (max-width: 768px) {
+  .tooltip-text {
+    left: 0;
+    transform: none;
+  }
+}
+
+
 
 /*Single card*/
 .card1 {
@@ -338,3 +364,45 @@ button:hover {
   flex-direction: column;
   gap: 15px; /* Spacing between content items */
 }
+/*view model*/
+.view-model-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.view-model-header {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.close-button {
+  background-color: #ff5555;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.close-button:hover {
+  background-color: #ff7777;
+}
+
+.view-model-canvas {
+  width: 80%;
+  height: 80%;
+  border: 1px solid white;
+  border-radius: 10px;
+}
+
